add flag to remove warnings