@@ -68,7 +68,9 @@ if [ ! -f ${HEFQUIN_CP} ]; then
 fi
 
 # JVM arguments required for ChronicleMap on Java 11+ used for persistent cache
+# See https://github.com/OpenHFT/OpenHFT/blob/ea/docs/Java-Version-Support.adoc
 JVM_ARGS="$JVM_ARGS \
+  --enable-native-access=ALL-UNNAMED \
   --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED \
   --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
   --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED \
